--- a/app/index.html
+++ b/app/index.html
@@ -269,7 +269,7 @@
 
 		<div class="bd-example">
 
-			<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+			<div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
 
 				<ol class="carousel-indicators sec-2__group-indicators">
 					<li data-target="#carouselExampleCaptions" data-slide-to="0" class="sec-2__indicator-1 active"></li>
